--- a/style/formulaire.css
+++ b/style/formulaire.css
@@ -10,6 +10,10 @@ form {
     text-align: center;
 }
 
+#deco button {
+    background-color: red;
+}
+
 label {
     display: block;
     font-weight: bold;
